--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
   
   <link href='https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="./css/theme.css" type="text/css" />
-  <link rel="stylesheet" href="./css/theme_extra.css" type="text/css" />
-  <link rel="stylesheet" href="./css/highlight.css">
 
   
   <script>
@@ -23,18 +20,15 @@
     var mkdocs_page_name = "None";
   </script>
   
-  <script src="./js/jquery-2.1.1.min.js"></script>
-  <script src="./js/modernizr-2.8.3.min.js"></script>
-  <script type="text/javascript" src="./js/highlight.pack.js"></script>
-  <script src="./js/theme.js"></script> 
+ 
 
  
 </head>
 
 <body class="wy-body-for-nav" role="document">
 
-  <div><a href="./tracker">K☆50:Трекер</a></div>
-  <div><a href="./tracker-api">API K☆50:Трекера</a></div>
+  <div><a href="/tracker">K☆50:Трекер</a></div>
+  <div><a href="/tracker-api">API K☆50:Трекера</a></div>
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TRCLJ2"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
