--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 <body class="wy-body-for-nav" role="document">
 
-  <div><a href="/k50docs/tracker">K☆50:Трекер</a></div>
-  <div><a href="/k50docs/tracker-api">API K☆50:Трекера</a></div>
+  <div><a href="./tracker">K☆50:Трекер</a></div>
+  <div><a href="./tracker-api">API K☆50:Трекера</a></div>
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TRCLJ2"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
