--- a/tracker-api/api-requests/get-counters-list/index.html
+++ b/tracker-api/api-requests/get-counters-list/index.html
@@ -158,11 +158,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>Данный метод возвращает список доступных счетчиков. По идентификатору счетчика можно выгрузить подробную информацию о <a href="../get-calls-stat">звонках</a> и <a href="../get-orders-stat">заказах</a> </p>
 <h3 id="_2">Синтаксис запроса</h3>
 <blockquote>
-<p>GET http://api-tracker.k50.ru/api/me</p>
+<p>GET http://api.tracker.k50.ru/api/me</p>
 </blockquote>
 <h3 id="_3">Пример запроса</h3>
 <blockquote>
-<p>GET http://api-tracker.k50.ru/api/me?apiKey=<strong>ae162273-8a98-459d-abb0-3454d0470b70</strong></p>
+<p>GET http://api.tracker.k50.ru/api/me?apiKey=<strong>ae162273-8a98-459d-abb0-3454d0470b70</strong></p>
 </blockquote>
 <h3 id="_4">Формат ответа</h3>
 <pre><code class="json">{&quot;projects&quot;: ▿[
