--- a/tracker-api/api-requests/get-orders-stat/index.html
+++ b/tracker-api/api-requests/get-orders-stat/index.html
@@ -158,7 +158,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <p>Данный метод возвращает подробную информацию о каждом заказе </p>
 <h3 id="_2">Синтаксис запроса</h3>
 <blockquote>
-<p>GET http://api-tracker.k50.ru/api/order/ext/<strong>counterId</strong>/<strong>dateFrom</strong>/<strong>dateTo</strong></p>
+<p>GET http://api.tracker.k50.ru/api/order/ext/<strong>counterId</strong>/<strong>dateFrom</strong>/<strong>dateTo</strong></p>
 </blockquote>
 <table>
 <thead>
@@ -184,7 +184,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </table>
 <h3 id="_3">Пример запроса</h3>
 <blockquote>
-<p>GET http://api-tracker.k50.ru/api/order/ext/<strong>1169056830</strong>/<strong>2015-12-10 00:00:00</strong>/<strong>2015-12-11 00:00:00</strong>?apiKey=<strong>ae162273-8a98-459d-abb0-3454d0470b70</strong></p>
+<p>GET http://api.tracker.k50.ru/api/order/ext/<strong>1169056830</strong>/<strong>2015-12-10 00:00:00</strong>/<strong>2015-12-11 00:00:00</strong>?apiKey=<strong>ae162273-8a98-459d-abb0-3454d0470b70</strong></p>
 </blockquote>
 <h3 id="_4">Формат ответа</h3>
 <pre><code class="json">{
