--- a/tracker-api/token_authorization/index.html
+++ b/tracker-api/token_authorization/index.html
@@ -153,7 +153,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 Токен необходимо передавать для каждого метода в HTTP-заголовке <code>apiKey</code> или в параметрах URL.</p>
 <h3 id="_2">Пример запроса с токеном в заголовках</h3>
 <blockquote>
-<p><strong>Request URL</strong>: "http://api-tracker.k50.ru/api/me"<br/>
+<p><strong>Request URL</strong>: "http://api.tracker.k50.ru/api/me"<br/>
 <strong>Request Method</strong>:GET<br/><br/>
 <strong>Request Headers</strong>: <br/>
 <strong>apiKey</strong>: <code>8dc57515-2c3d-4ebe-o845-vzd663e59c709</code><br/>
@@ -161,7 +161,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </blockquote>
 <h3 id="url">Пример запроса с токеном в параметрах URL</h3>
 <blockquote>
-<p><strong>Request URL</strong>: "http://api-tracker.k50.ru/api/me?apiKey= <code>8dc57515-2c3d-4ebe-o845-vzd663e59c709</code>"<br/>
+<p><strong>Request URL</strong>: "http://api.tracker.k50.ru/api/me?apiKey= <code>8dc57515-2c3d-4ebe-o845-vzd663e59c709</code>"<br/>
 <strong>Request Method</strong>:GET<br/><br/>
 <strong>Request Headers</strong>:<br/>
 <strong>Content-Type</strong>:application/json</p>
