--- a/tracker/integration/tracker-api/index.html
+++ b/tracker/integration/tracker-api/index.html
@@ -265,7 +265,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
               
                 <h1 id="api">Использование API трекера</h1>
 <p>API сервиса К50:Трекер позволяет получать информацию о звонках и заказах, не используя веб-интерфейс.
-Подробнее читайте в <a href="./tracker-api">документации API</a></p>
+Подробнее читайте в <a href="http://help.k50.ru/tracker-api" target="_blank">документации API</a></p>
               
             </div>
           </div>
